fixing pre-wrap bug

--- a/plugins/swam/themes/base/forms.scss
+++ b/plugins/swam/themes/base/forms.scss
@@ -326,7 +326,7 @@ div.searchdown-input {
 
 div.modal-view {
     [data-field] {
-      white-space: pre;
+      white-space: pre-wrap;
     }
 }
 
