--- a/plugins/swam/themes/base/tables.scss
+++ b/plugins/swam/themes/base/tables.scss
@@ -248,7 +248,7 @@ table.swam-table {
             }
 
             &.td-pre {
-                white-space: pre;
+                white-space: pre-wrap;
             }
         }
     }
